// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Given no option, both utility and semantic classes are generated 1`] = `
".bg-slate-1 {
  --tw-bg-opacity: 1;
  background-color: rgb(252 252 253 / var(--tw-bg-opacity));
}
.bg-slate-app {
  --tw-bg-opacity: 1;
  background-color: rgb(252 252 253 / var(--tw-bg-opacity));
}
@media (prefers-color-scheme: dark) {
  .bg-slate-app {
    --tw-bg-opacity: 1;
    background-color: rgb(17 17 19 / var(--tw-bg-opacity));
  }
}
"
`;

exports[`Given option `disableSemantics`, semantic classes are not generated 1`] = `
".bg-slate-1 {
  --tw-bg-opacity: 1;
  background-color: rgb(252 252 253 / var(--tw-bg-opacity));
}
"
`;

exports[`Given option `include`, only specified colors are generated 1`] = `
".bg-slate-1 {
  --tw-bg-opacity: 1;
  background-color: rgb(252 252 253 / var(--tw-bg-opacity));
}
"
`;

exports[`Given option `exclude`, specified colors are not generated 1`] = `""`;

exports[`Given option `priority=radix-only`, Tailwind colors are preserved 1`] = `
".bg-zinc-100 {
  --tw-bg-opacity: 1;
  background-color: rgb(244 244 245 / var(--tw-bg-opacity));
}
"
`;

exports[`Given option `priority=tailwind-first`, Tailwind colors take precedence 1`] = `
".bg-red-100 {
  --tw-bg-opacity: 1;
  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
}
"
`;

exports[`Given option `aliases`, conflicted color names are both preserved 1`] = `
".bg-red-700 {
  --tw-bg-opacity: 1;
  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
}
.bg-sun-9 {
  --tw-bg-opacity: 1;
  background-color: rgb(229 72 77 / var(--tw-bg-opacity));
}
"
`;

exports[`Utility classes are generated for custom colors 1`] = `
".bg-custom1 {
  --tw-bg-opacity: 1;
  background-color: rgb(18 52 86 / var(--tw-bg-opacity));
}
.bg-custom2-1 {
  --tw-bg-opacity: 1;
  background-color: rgb(101 67 33 / var(--tw-bg-opacity));
}
"
`;

exports[`CSS classes are in correct shape 1`] = `
".bg-slate-action {
  --tw-bg-opacity: 1;
  background-color: rgb(232 232 236 / var(--tw-bg-opacity));
}
.bg-slate-action:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(224 225 230 / var(--tw-bg-opacity));
}
.bg-slate-action:active {
  --tw-bg-opacity: 1;
  background-color: rgb(217 217 224 / var(--tw-bg-opacity));
}
@media (prefers-color-scheme: dark) {
  .bg-slate-action {
    --tw-bg-opacity: 1;
    background-color: rgb(39 42 45 / var(--tw-bg-opacity));
  }
  .bg-slate-action:hover {
    --tw-bg-opacity: 1;
    background-color: rgb(46 49 53 / var(--tw-bg-opacity));
  }
  .bg-slate-action:active {
    --tw-bg-opacity: 1;
    background-color: rgb(54 58 63 / var(--tw-bg-opacity));
  }
}
.bg-slate-app {
  --tw-bg-opacity: 1;
  background-color: rgb(252 252 253 / var(--tw-bg-opacity));
}
@media (prefers-color-scheme: dark) {
  .bg-slate-app {
    --tw-bg-opacity: 1;
    background-color: rgb(17 17 19 / var(--tw-bg-opacity));
  }
}
.bg-slate-ghost {
  background-color: transparent;
}
.bg-slate-ghost:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(232 232 236 / var(--tw-bg-opacity));
}
.bg-slate-ghost:active {
  --tw-bg-opacity: 1;
  background-color: rgb(224 225 230 / var(--tw-bg-opacity));
}
@media (prefers-color-scheme: dark) {
  .bg-slate-ghost {
    background-color: transparent;
  }
  .bg-slate-ghost:hover {
    --tw-bg-opacity: 1;
    background-color: rgb(39 42 45 / var(--tw-bg-opacity));
  }
  .bg-slate-ghost:active {
    --tw-bg-opacity: 1;
    background-color: rgb(46 49 53 / var(--tw-bg-opacity));
  }
}
.bg-slate-subtle {
  --tw-bg-opacity: 1;
  background-color: rgb(249 249 251 / var(--tw-bg-opacity));
}
@media (prefers-color-scheme: dark) {
  .bg-slate-subtle {
    --tw-bg-opacity: 1;
    background-color: rgb(24 25 27 / var(--tw-bg-opacity));
  }
}
.bg-slate-ui {
  --tw-bg-opacity: 1;
  background-color: rgb(240 240 243 / var(--tw-bg-opacity));
}
.bg-slate-ui:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(232 232 236 / var(--tw-bg-opacity));
}
.bg-slate-ui:active {
  --tw-bg-opacity: 1;
  background-color: rgb(224 225 230 / var(--tw-bg-opacity));
}
@media (prefers-color-scheme: dark) {
  .bg-slate-ui {
    --tw-bg-opacity: 1;
    background-color: rgb(33 34 37 / var(--tw-bg-opacity));
  }
  .bg-slate-ui:hover {
    --tw-bg-opacity: 1;
    background-color: rgb(39 42 45 / var(--tw-bg-opacity));
  }
  .bg-slate-ui:active {
    --tw-bg-opacity: 1;
    background-color: rgb(46 49 53 / var(--tw-bg-opacity));
  }
}
.border-slate-dim {
  --tw-border-opacity: 1;
  border-color: rgb(217 217 224 / var(--tw-border-opacity));
}
@media (prefers-color-scheme: dark) {
  .border-slate-dim {
    --tw-border-opacity: 1;
    border-color: rgb(54 58 63 / var(--tw-border-opacity));
  }
}
.border-slate-normal {
  --tw-border-opacity: 1;
  border-color: rgb(205 206 214 / var(--tw-border-opacity));
}
.border-slate-normal:hover {
  --tw-border-opacity: 1;
  border-color: rgb(185 187 198 / var(--tw-border-opacity));
}
@media (prefers-color-scheme: dark) {
  .border-slate-normal {
    --tw-border-opacity: 1;
    border-color: rgb(67 72 78 / var(--tw-border-opacity));
  }
  .border-slate-normal:hover {
    --tw-border-opacity: 1;
    border-color: rgb(90 97 105 / var(--tw-border-opacity));
  }
}
.divide-slate-dim > :not([hidden]) ~ :not([hidden]) {
  --tw-divide-opacity: 1;
  border-color: rgb(217 217 224 / var(--tw-divide-opacity));
}
@media (prefers-color-scheme: dark) {
  .divide-slate-dim > :not([hidden]) ~ :not([hidden]) {
    --tw-divide-opacity: 1;
    border-color: rgb(54 58 63 / var(--tw-divide-opacity));
  }
}
.divide-slate-normal > :not([hidden]) ~ :not([hidden]) {
  --tw-divide-opacity: 1;
  border-color: rgb(205 206 214 / var(--tw-divide-opacity));
}
.divide-slate-normal:hover > :not([hidden]) ~ :not([hidden]) {
  --tw-divide-opacity: 1;
  border-color: rgb(185 187 198 / var(--tw-divide-opacity));
}
@media (prefers-color-scheme: dark) {
  .divide-slate-normal > :not([hidden]) ~ :not([hidden]) {
    --tw-divide-opacity: 1;
    border-color: rgb(67 72 78 / var(--tw-divide-opacity));
  }
  .divide-slate-normal:hover > :not([hidden]) ~ :not([hidden]) {
    --tw-divide-opacity: 1;
    border-color: rgb(90 97 105 / var(--tw-divide-opacity));
  }
}
.text-slate-dim {
  --tw-text-opacity: 1;
  color: rgb(96 100 108 / var(--tw-text-opacity));
}
@media (prefers-color-scheme: dark) {
  .text-slate-dim {
    --tw-text-opacity: 1;
    color: rgb(176 180 186 / var(--tw-text-opacity));
  }
}
.text-slate-normal {
  --tw-text-opacity: 1;
  color: rgb(28 32 36 / var(--tw-text-opacity));
}
@media (prefers-color-scheme: dark) {
  .text-slate-normal {
    --tw-text-opacity: 1;
    color: rgb(237 238 240 / var(--tw-text-opacity));
  }
}
"
`;
